# neuron-age-estimator

./: .dockerignore  .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.impeccable/critique/: 2026-06-23T00-09-40Z__frontend-src-neuroagelanding-jsx.md
backend/: Dockerfile  main.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  BrainViewer3D.jsx  Dashboard.jsx  NeuralBrainBackground.jsx  NeuroAgeLanding.jsx  TrendChart.jsx  index.css  useLenis.js
notebooks/: 02b_feature_extraction_v2.py  03b_train_models.py  04_downsample_volumes.py  05_train_cnn3d.py  eda.py  feature-extraction.py  train-models.py
scripts/: run_feature_extraction.py  run_train_classical.py  run_train_cnn.py
src/brain_age/: __init__.py  config.py
src/brain_age/data/: __init__.py  loader.py  preprocessing.py
src/brain_age/features/: __init__.py  extraction.py
src/brain_age/models/: __init__.py  classical.py  cnn3d.py  dataset.py  gradcam.py
src/brain_age/training/: train_classical.py  train_cnn.py
tests/: test_api.py  test_data.py  test_features.py  test_gradcam.py  test_models.py
