[project]
name = "brain-age-estimation"
version = "0.1.0"
description = "Stima dell'età cerebrale da MRI 3D mediante ML classico e CNN 3D"
authors = [
    { name = "Alessio Napoli" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "nibabel>=5.2",
    "joblib>=1.3",
    "tqdm>=4.66",
    "torch>=2.2",
    "scikit-image>=0.22",
    "trimesh>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "fast-simplification>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "backend"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
